--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
   }
 
 * {
-      box-sizing: border-box;
+    box-sizing: border-box;
   }
 
 body{
@@ -51,7 +51,7 @@ nav {
 
 nav a {
     padding: 5px 10px;
-    font-size: 130%;
+    font-size: 160%;
     color: var(--secondary-color);
     background-color: var(--primary-color);
     background-size: 100% 10px;
@@ -75,33 +75,172 @@ main{
 }
   
 .jumbotron{
-
+  display: flex; 
+  padding: 3% 6%;
+  justify-content: flex-end;
+  text-align: right;
+  align-items: flex-end; 
+  background-image: url(),linear-gradient(180deg,var(--fourth-color) 0%,var(--secondary-color) 100%);
+  background-position: center;
+  background-size: cover;
+  background: var(--tertiary-color);
+  background-blend-mode: soft-light;
+  min-height: min-content;
+  color: var(--fifth-color);
   } 
-  .photo{
-    background-image: url("/assets/images/");
-  }
-
-  .flex-container {
-    display: flex;
-    flex-direction: row;
-  }
   
-  .column {
-    display: flex;
-    
-  }
+.jumbotron div {
+  flex: 0 0 87%;
+}  
 
-  .row{
-    display: flex;
-  }
-  .col-a {
-    display:flex;
-    flex: 25%;
-  }
+.jumbotron h2 {
+  display: inline;
+  background-color: var(--fourth-color);
+  color: var(--tertiary-color);
+  margin: 0;
+  padding: 5px 10px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 55px;
+  font-style: italic;
+  line-height: 1.3;
+}
 
-  .col-b {
-    display: flex;
-    flex:75%;
-    justify-content: flex-end;
-  }
+.flex-container {
+  margin: 0 auto 0 auto;
+  max-width: 90%;
+}
 
+.section-class {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+  margin: 23px 0;
+  padding: 10px 0;
+}
+
+.section-class > h2 {
+  flex: 0 0 20%;
+  font-size: 50px;
+  text-align: right;
+  line-height: 1.1;
+  border-right: 5px solid rgb(35, 5, 35);
+  padding-right: 13px;
+}
+
+.section-class > div {
+  flex: 0 0 75%;
+}
+
+.section-class p {
+  margin-bottom: 20px;
+}
+
+.work-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.work-child {
+  display: flex;
+  align-items: flex-end;
+  flex-basis: 48.5%;
+  font-size: 1vw ;
+  margin: 0.45em;
+  padding: 0 0 20px 0;
+  background-blend-mode: soft-light;
+  background-size: 100%;
+  background-color: var(--primary-color);
+  border: 2px solid var(--tertiary-color);
+  transition: all 0.6s;
+  color: var(--tertiary-color);
+  min-height: 160px;
+  max-height: 160px;
+}
+
+.work-child:first-child {
+  min-height: 380px;
+  flex-basis: 100%;
+}
+
+.work-child:hover{
+  background-color: var(--fifth-color);
+}
+
+.work-child div {
+  background-color: var(--fourth-color);
+  padding: 9px 12px;
+}
+
+.work-child h3 {
+  font-size: x-large;
+}
+
+address {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+address a{
+  display: inline-block;
+  margin: 30px 33px 0;
+  padding:5px ;
+  font-size: 35px;
+  background-position:bottom ;
+  background-size: 100%;
+  color: var(--secondary-color);
+ 
+}
+
+address a:hover{
+  color:var(--tertiary-color)
+}
+
+.team{
+  background-image: url('../images/Teams.png');
+}
+
+.better{
+  background-image: url('../images/Better_reads.png');
+}
+
+.movie{
+  background-image: url('../images/Movies.png');
+}
+
+.password{
+  background-image: url('../images/Password.png');
+}
+
+.run{
+  background-image: url('../images/Run-Buddy.png');
+}
+
+@media screen and (max-width: 980px) {
+  header {
+    padding: 0 0 10px 0;
+    justify-content: center;
+    text-align: center;
+  }
+}
+ @media screen and (max-width: 768px) {
+  .work-child,.work-child:first-child{
+    flex-basis: 100%;
+  }
+  .jumbotron{
+    text-align: center;
+    justify-content: center;
+  }
+  .work-child:first-child{
+    min-height: 145px;
+  }
+  address{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+ }
