--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,6 +227,21 @@ address a:hover{
     justify-content: center;
     text-align: center;
   }
+
+  header h1{
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+  }
+
+  header nav{
+    justify-content: center;
+  }
+
+  .section-class>h2, .section-class> div{
+    flex: 0 0 100%;
+  }
+
 }
  @media screen and (max-width: 768px) {
   .work-child,.work-child:first-child{
