--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 :root {
     --primary-color: #dfdfe0f5;
-    --secondary-color: #592d92d3;
+    --secondary-color: #7939ced3;
     --tertiary-color: rgba(0, 0, 0, 0.947);
-    --fourth-color: rgb(181, 121, 255);
+    --fourth-color: rgb(124, 54, 210);
     --fifth-color: rgba(129, 126, 126, 0.699);
   }
 
@@ -18,10 +18,6 @@ body{
   padding: 0;
   color: var(--tertiary-color);
   }
-
- h1,h2,h3,p{
-  margin: 0;
- } 
 
 header {
     display: flex;
@@ -43,6 +39,7 @@ header h1 {
     padding: 7px 3px 7px 4px;
   }
 
+  /* Navigation Menu */
 nav {
     display: flex;
     flex-direction: row;
@@ -61,48 +58,49 @@ nav a {
   }
 
 nav a:hover {
-    background-size: 100% 100%;
-    color: var(--fourth-color);
+    
+    color: var(--tertiary-color);
   }
 
 nav a:last-child{
   margin-right: 1px;
 }
 
-main{
-  margin-top: 25px;
-  margin-bottom: 45px;
-}
-  
+h1,h2,h3,p{
+  margin: 0;
+} 
+
+ /* Banner*/
 .jumbotron{
   display: flex; 
+  flex: 0 0 87%;
   padding: 3% 6%;
   justify-content: flex-end;
-  text-align: right;
+  text-align: center;
   align-items: flex-end; 
-  background-image: url(),linear-gradient(180deg,var(--fourth-color) 0%,var(--secondary-color) 100%);
+  background-image: url("../images/Background.jpg");
   background-position: center;
   background-size: cover;
-  background: var(--tertiary-color);
-  background-blend-mode: soft-light;
+  background-blend-mode:darken;
   min-height: min-content;
+  max-height:fit-content;
   color: var(--fifth-color);
   } 
-  
-.jumbotron div {
-  flex: 0 0 87%;
-}  
 
 .jumbotron h2 {
   display: inline;
-  background-color: var(--fourth-color);
   color: var(--tertiary-color);
   margin: 0;
-  padding: 5px 10px;
+  padding: 0;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 55px;
+  font-size: 60px;
   font-style: italic;
   line-height: 1.3;
+}
+
+main{
+  margin-top: 25px;
+  margin-bottom: 45px;
 }
 
 .flex-container {
@@ -110,6 +108,7 @@ main{
   max-width: 90%;
 }
 
+/* Seetings for the different sections */
 .section-class {
   display: flex;
   flex-direction: row;
@@ -134,9 +133,11 @@ main{
 }
 
 .section-class p {
+  font-size: 20px;
   margin-bottom: 20px;
 }
 
+/* Projects/work section */
 .work-container {
   display: flex;
   flex-wrap: wrap;
@@ -152,21 +153,21 @@ main{
   padding: 0 0 20px 0;
   background-blend-mode: soft-light;
   background-size: 100%;
-  background-color: var(--primary-color);
-  border: 2px solid var(--tertiary-color);
-  transition: all 0.6s;
+  background-color: rgb(184, 177, 177);
+  border: 3px solid var(--tertiary-color);
+  transition: all 0.3s;
   color: var(--tertiary-color);
   min-height: 160px;
   max-height: 160px;
 }
 
+.work-child:hover{
+  background-color: var(--fifth-color);
+}
+
 .work-child:first-child {
   min-height: 380px;
   flex-basis: 100%;
-}
-
-.work-child:hover{
-  background-color: var(--fifth-color);
 }
 
 .work-child div {
@@ -178,29 +179,7 @@ main{
   font-size: x-large;
 }
 
-address {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
-}
-
-address a{
-  display: inline-block;
-  margin: 30px 33px 0;
-  padding:5px ;
-  font-size: 35px;
-  background-position:bottom ;
-  background-size: 100%;
-  color: var(--secondary-color);
- 
-}
-
-address a:hover{
-  color:var(--tertiary-color)
-}
-
+/* Portfolio images */
 .team{
   background-image: url('../images/Teams.png');
 }
@@ -221,6 +200,31 @@ address a:hover{
   background-image: url('../images/Run-Buddy.png');
 }
 
+/* Address section */
+address {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+address a {
+  display: inline-block;
+  margin: 30px 33px 0;
+  padding:5px ;
+  font-size: 35px;
+  background-position:bottom ;
+  background-size: 100%;
+  color: var(--secondary-color);
+ 
+}
+
+address a:hover{
+  color:var(--tertiary-color)
+}
+
+/* Smaller screen sizes */
 @media screen and (max-width: 980px) {
   header {
     padding: 0 0 10px 0;
@@ -229,6 +233,7 @@ address a:hover{
   }
 
   header h1{
+    font-size: 5em;
     width: 100%;
     padding: 5px;
     margin-bottom: 10px;
@@ -238,22 +243,40 @@ address a:hover{
     justify-content: center;
   }
 
-  .section-class>h2, .section-class> div{
+.section-class > h2 {
     flex: 0 0 100%;
+    text-align: left;
+    font-size: 40px;
   }
 
-}
- @media screen and (max-width: 768px) {
-  .work-child,.work-child:first-child{
-    flex-basis: 100%;
+.section-class > div{
+  flex: 0 0 100%;
+  text-align: left;
+  padding-bottom: 8px;
+  border-right: none;
+  border-bottom: 3px solid var(--tertiary-color);
+  margin-bottom: 15px;
   }
+}
+
+@media screen and (max-width: 768px) {
   .jumbotron{
     text-align: center;
     justify-content: center;
   }
+
+  .section-class>h2{
+    font-size: 35px;
+  }
+
   .work-child:first-child{
     min-height: 145px;
   }
+
+  .work-child,.work-child:first-child{
+    flex-basis: 100%;
+  }
+ 
   address{
     flex-direction: column;
     align-items: flex-start;
